--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .gradle
-**/build/
-!src/**/build/
+/build/
+build
+
+app/bin
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -8,14 +10,8 @@ gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
 # Cache of project
 .gradletasknamecache
 
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
